--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@apollo/client": "^3.2.4",
+    "@sei-js/core": "^3.1.1",
+    "@sei-js/react": "^3.1.1",
     "@terra-dev/wallet-types": "^3.7.0",
     "@terra-money/log-finder": "^1.1.6",
     "@terra-money/log-finder-ruleset": "^3.0.0",
@@ -35,6 +37,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
+    "crypto-js": "^4.2.0",
     "graphql": "^15.3.0",
     "http-proxy-middleware": "^2.0.0",
     "husky": "^4.3.0",
@@ -59,7 +62,11 @@
     "source-map-explorer": "^2.5.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "crypto": "npm:crypto-browserify"
+  },
+  "browser": {
+    "crypto": false
   },
   "scripts": {
     "start": "react-app-rewired start",
