--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_MAINNET_SERVICE_URL=https://api.terraswap.io
 REACT_APP_TESTNET_SERVICE_URL=https://api-pisco.terraswap.io
 REACT_APP_MAINNET_DASHBOARD_URL=https://api.terraswap.io/dashboard
 REACT_APP_TESTNET_DASHBOARD_URL=https://api-pisco.terraswap.io/dashboard
+PORT=5555
