--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "source-map-explorer": "^2.5.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "web-vitals": "^3.5.0"
   },
   "browser": {
     "crypto": false
@@ -101,7 +102,8 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.3.5"
   },
   "engines": {
     "node": ">=17 <18"
